Using same spec.yaml everywhere

--- a/ruby/Rakefile
+++ b/ruby/Rakefile
@@ -3,7 +3,7 @@ require 'specgen'
 task default: %w[test]
 
 task :generate_code do
-  specgen_client_ruby(spec_file: "spec.yaml", generate_path: "./lib")
+  specgen_client_ruby(spec_file: "./../spec.yaml", generate_path: "./lib")
 end
 
 task :test => :generate_code do
