CircleCI: fix test-service build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,10 +16,8 @@ jobs:
       - image: cimg/go:1.16.4
     steps:
       - checkout
-      - start-service:
-          port: 8081
       - run:
-          name: Built test service
+          name: Build test-service
           command: |
             cd ./test-service
             go install github.com/specgen-io/specgen/<<pipeline.parameters.specgen-version-major>>@v<< pipeline.parameters.specgen-version >>
