--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,12 +1,12 @@
 version: 2.1
 
 orbs:
-  artifactory: specgen/artifactory@0.1.0
+  artifactory: specgen/artifactory@0.2.0
 
 parameters:
   specgen-version:
     type: string
-    default: 2.0.508
+    default: 2.0.519
 
   specgen-version-major:
     type: string
@@ -61,6 +61,9 @@ jobs:
       - checkout
       - attach_workspace:
           at: .
+      - artifactory/setup-gems:
+          jfrog-server-url: specgen.jfrog.io
+          repo-name: gems
       - start-service:
           port: 8081
       - run:
