ruby: Configuring specgen gem

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -71,7 +71,15 @@ jobs:
           command: |
             gem sources --list            
             cd ./ruby
-            bundle inject specgen "= << pipeline.parameters.specgen-version >>"
+
+            tee -a > ./Gemfile \<<END
+            source 'https://specgen.jfrog.io/artifactory/api/gems/gems/' do
+              gem 'specgen', '<< pipeline.parameters.specgen-version >>'
+            end
+            END
+            
+            cat ./Gemfile
+
             bundle install
             export SERVICE_URL=http://localhost:8081
             rake
