ruby: Added bundle config

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,10 +69,9 @@ jobs:
       - run:
           name: Test Ruby client
           command: |
-            gem sources --list            
             cd ./ruby
 
-            tee -a > ./Gemfile \<<END
+            tee --apend ./Gemfile <<END
             source 'https://specgen.jfrog.io/artifactory/api/gems/gems/' do
               gem 'specgen', '<< pipeline.parameters.specgen-version >>'
             end
@@ -80,6 +79,7 @@ jobs:
             
             cat ./Gemfile
 
+            bundle config specgen.jfrog.io $JFROG_USER:$JFROG_PASS
             bundle install
             export SERVICE_URL=http://localhost:8081
             rake
