--- a/ts-axios-superstruct/package.json
+++ b/ts-axios-superstruct/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "specgen": "specgen client-ts-axios --validation superstruct --spec-file ./../spec.yaml --generate-path .",
+    "specgen": "specgen client-ts-axios --validation superstruct --spec-file ./../spec.yaml --generate-path ./test-service",
     "test": "jest",
     "coverage": "jest --coverage"
   },
