--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -46,6 +46,7 @@ jobs:
           command: |
             cd ./go
             go install github.com/specgen-io/specgen/<<pipeline.parameters.specgen-version-major>>@v<< pipeline.parameters.specgen-version >>
+            go generate
             mkdir -p ./test-results
             go install github.com/jstemmer/go-junit-report@v0.9.1
             go test ./... -v
