Added same operation name

--- a/spec.yaml
+++ b/spec.yaml
@@ -44,6 +44,12 @@ http:
       response:
         ok: Message
 
+    same_operation_name:
+      endpoint: GET /echo/same_operation_name
+      response:
+        ok: empty
+        forbidden: empty
+
   check:
     check_empty:
       endpoint: GET /check/empty
@@ -76,6 +82,12 @@ http:
       endpoint: GET /check/forbidden
       response:
         ok: Message
+        forbidden: empty
+
+    same_operation_name:
+      endpoint: GET /check/same_operation_name
+      response:
+        ok: empty
         forbidden: empty
 
 models:
