--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 parameters:
   specgen-version:
     type: string
-    default: 2.1.896
+    default: 2.1.902
 
   specgen-version-major:
     type: string
@@ -53,6 +53,38 @@ jobs:
             go test ./... -v 2>&1 | go-junit-report > ./test-results/go-test-report.xml
       - store_test_results:
           path: ./go/test-results
+
+  java-okhttp:
+    environment:
+      SPECGEN_VERSION: << pipeline.parameters.specgen-version >>
+    working_directory: ~/specgen-tests
+    docker:
+      - image: circleci/openjdk:11-jdk
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          keys:
+            - cache-{{ checksum "./java-okhttp/pom.xml" }}
+      - artifactory/setup-maven:
+          jfrog-server-url: specgen.jfrog.io
+          repo-name: maven
+      - start-service:
+          port: 8081
+      - run:
+          name: Test Java OkHttp client
+          command: |
+            cd ./java-okhttp
+            mkdir -p ./test-results
+            mvn clean test -Dspecgen.version=<<pipeline.parameters.specgen-version>>
+      - store_test_results:
+          path: ./java-okhttp/test-results
+      - save_cache:
+          key: cache-{{ checksum "./java-okhttp/pom.xml" }}
+          paths:
+            - ~/.m2
+            - ~/.ivy2
 
   ruby:
     working_directory: ~/specgen-tests
@@ -255,6 +287,10 @@ workflows:
       - test-service:
           context: specgen
       - go:
+          context: specgen
+          requires:
+            - test-service
+      - java-okhttp:
           context: specgen
           requires:
             - test-service
