--- a/java-okhttp/pom.xml
+++ b/java-okhttp/pom.xml
@@ -12,7 +12,6 @@
     <properties>
         <specgen.version>0.0.0-SNAPSHOT</specgen.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <java.version>11</java.version>
     </properties>
 
     <dependencies>
@@ -56,6 +55,14 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version>
+                <configuration>
+                    <release>11</release>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>io.specgen</groupId>
                 <artifactId>specgen-maven-plugin</artifactId>
