--- a/java-okhttp/pom.xml
+++ b/java-okhttp/pom.xml
@@ -64,6 +64,11 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.0</version>
+            </plugin>
+            <plugin>
                 <groupId>io.specgen</groupId>
                 <artifactId>specgen-maven-plugin</artifactId>
                 <version>${specgen.version}</version>
