--- a/java-okhttp/pom.xml
+++ b/java-okhttp/pom.xml
@@ -64,6 +64,17 @@
                 </configuration>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.22.2</version>
+                <configuration>
+                    <includes>
+                        <include>**/*ClientTest.java</include>
+                        <include>**/*ClientTestV2.java</include>
+                    </includes>
+                </configuration>
+            </plugin>
+            <plugin>
                 <groupId>io.specgen</groupId>
                 <artifactId>specgen-maven-plugin</artifactId>
                 <version>${specgen.version}</version>
