--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 parameters:
   specgen-version:
     type: string
-    default: 2.1.966
+    default: 2.1.968
 
   specgen-version-major:
     type: string
@@ -239,6 +239,56 @@ jobs:
       - store_test_results:
           path: ./ts-fetch-superstruct/test-results
 
+  ts-browser-fetch-superstruct:
+    environment:
+      SPECGEN_VERSION: << pipeline.parameters.specgen-version >>
+    working_directory: ~/specgen-tests
+    docker:
+      - image: cimg/node:16.8.0
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - start-service:
+          port: 8081
+      - artifactory/setup-npm:
+          jfrog-server-url: specgen.jfrog.io
+          repo-name: npm
+          scope: specgen.io
+      - run:
+          name: Setup npm
+          command: |
+            cd ./ts-browser-fetch-superstruct
+            npm install @specgen.io/specgen.io@$SPECGEN_VERSION --save-dev
+      - restore_cache:
+          keys:
+            - cache-{{ checksum "./ts-browser-fetch-superstruct/package.json" }}
+      - run:
+          name: Build code
+          command: |
+            cd ./ts-browser-fetch-superstruct
+            npm install
+            npm run specgen
+            npm run build
+      - run:
+          name: Run browser
+          command: |
+            cd ./ts-browser-fetch-superstruct
+            npm run start
+          background: true
+      - wait-url:
+          url: http://localhost:8082/
+      - run:
+          name: Test fetch client
+          command: |
+            cd ./ts-browser-fetch-superstruct
+            export SERVICE_URL=http://localhost:8081
+            npm run test
+      - save_cache:
+          key: cache-{{ checksum "./ts-browser-fetch-superstruct/package.json" }}
+          paths:
+            - ~/specgen-tests/ts-browser-fetch-superstruct/node_modules            
+
   ts-axios-iots:
     environment:
       SPECGEN_VERSION: << pipeline.parameters.specgen-version >>
@@ -347,6 +397,10 @@ workflows:
           requires:
             - test-service
       - ts-fetch-superstruct:
+          context: specgen
+          requires:
+            - test-service
+      - ts-browser-fetch-superstruct:
           context: specgen
           requires:
             - test-service
