java: fix plugin name

--- a/java-okhttp/pom.xml
+++ b/java-okhttp/pom.xml
@@ -87,7 +87,7 @@
                 <executions>
                     <execution>
                         <goals>
-                            <goal>client-java-okhttp</goal>
+                            <goal>client-java</goal>
                         </goals>
                     </execution>
                 </executions>
