--- a/spec.yaml
+++ b/spec.yaml
@@ -6,7 +6,7 @@ v2:
   http:
     echo:
       echo_body_model:
-        endpoint: POST /echo/body
+        endpoint: POST /echo/body_model
         body: Message
         response:
           ok: Message
@@ -25,7 +25,7 @@ http:
         ok: string
 
     echo_body_model:
-      endpoint: POST /echo/body_json
+      endpoint: POST /echo/body_model
       body: Message
       response:
         ok: Message    
