--- a/java-okhttp-moshi/pom.xml
+++ b/java-okhttp-moshi/pom.xml
@@ -36,6 +36,11 @@
             <version>2.17.0</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.findbugs</groupId>
+            <artifactId>jsr305</artifactId>
+            <version>3.0.2</version>
+        </dependency>
+        <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>5.8.2</version>
