--- a/java-okhttp-jackson/pom.xml
+++ b/java-okhttp-jackson/pom.xml
@@ -82,7 +82,7 @@
             </plugin>
             <plugin>
                 <groupId>io.specgen</groupId>
-                <artifactId>specgen-maven-plugin</artifactId>
+                <artifactId>java-maven-plugin</artifactId>
                 <version>${specgen.version}</version>
                 <executions>
                     <execution>
