--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,7 @@ orbs:
 parameters:
   specgen-version:
     type: string
-    default: 2.1.1828
+    default: 2.1.1853
 
   specgen-version-major:
     type: string
@@ -170,7 +170,63 @@ jobs:
           path: ./kotlin-okhttp-moshi/build/test-results
       - save_cache:
           key: cache-{{ checksum "./kotlin-okhttp-moshi/build.gradle.kts" }}-{{ checksum "./kotlin-okhttp-moshi/settings.gradle.kts" }}
-          paths: [ ~/.gradle ]            
+          paths: [ ~/.gradle ]    
+
+  kotlin-micronaut-declarative-jackson:
+    environment:
+      SPECGEN_VERSION: << pipeline.parameters.specgen-version >>
+    working_directory: ~/specgen-tests
+    docker:
+      - image: circleci/openjdk:11-jdk
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          key: cache-{{ checksum "./kotlin-micronaut-declarative-jackson/build.gradle.kts" }}-{{ checksum "./kotlin-micronaut-declarative-jackson/settings.gradle.kts" }}
+      - start-service:
+          port: 8081
+      - run:
+          name: Test Kotlin Micronaut declarative client
+          command: |
+            cd ./kotlin-micronaut-declarative-jackson
+            ./gradlew --build-cache --no-daemon --stacktrace test \
+            -Djfrog.user=$JFROG_USER \
+            -Djfrog.pass=$JFROG_PASS \
+            -Dspecgen.version=<<pipeline.parameters.specgen-version>>
+      - store_test_results:
+          path: ./kotlin-micronaut-declarative-jackson/build/test-results
+      - save_cache:
+          key: cache-{{ checksum "./kotlin-micronaut-declarative-jackson/build.gradle.kts" }}-{{ checksum "./kotlin-micronaut-declarative-jackson/settings.gradle.kts" }}
+          paths: [ ~/.gradle ]    
+
+  kotlin-micronaut-low-level-jackson:
+    environment:
+      SPECGEN_VERSION: << pipeline.parameters.specgen-version >>
+    working_directory: ~/specgen-tests
+    docker:
+      - image: circleci/openjdk:11-jdk
+    steps:
+      - checkout
+      - attach_workspace:
+          at: .
+      - restore_cache:
+          key: cache-{{ checksum "./kotlin-micronaut-low-level-jackson/build.gradle.kts" }}-{{ checksum "./kotlin-micronaut-low-level-jackson/settings.gradle.kts" }}
+      - start-service:
+          port: 8081
+      - run:
+          name: Test Kotlin Micronaut low-level client
+          command: |
+            cd ./kotlin-micronaut-low-level-jackson
+            ./gradlew --build-cache --no-daemon --stacktrace test \
+            -Djfrog.user=$JFROG_USER \
+            -Djfrog.pass=$JFROG_PASS \
+            -Dspecgen.version=<<pipeline.parameters.specgen-version>>
+      - store_test_results:
+          path: ./kotlin-micronaut-low-level-jackson/build/test-results
+      - save_cache:
+          key: cache-{{ checksum "./kotlin-micronaut-low-level-jackson/build.gradle.kts" }}-{{ checksum "./kotlin-micronaut-low-level-jackson/settings.gradle.kts" }}
+          paths: [ ~/.gradle ]                          
 
   ruby:
     working_directory: ~/specgen-tests
@@ -482,7 +538,15 @@ workflows:
       - kotlin-okhttp-moshi:
           context: specgen
           requires:
-            - test-service          
+            - test-service   
+      - kotlin-micronaut-declarative-jackson:
+          context: specgen
+          requires:
+            - test-service  
+      -  kotlin-micronaut-low-level-jackson:
+          context: specgen
+          requires:
+            - test-service                     
       - ruby:
           context: specgen
           requires:
